--- a/MyLittleVault/MyLittleVault/MyLittleVault.csproj
+++ b/MyLittleVault/MyLittleVault/MyLittleVault.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DCE12DB4-53BF-482E-BD23-8D4E5EFC30D1}</ProjectGuid>
+    <ProjectGuid>{5AAD2B41-45EB-427F-B5FC-3308CC3706DB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsFormsApp1</RootNamespace>
-    <AssemblyName>WindowsFormsApp1</AssemblyName>
+    <RootNamespace>MyLittleVault</RootNamespace>
+    <AssemblyName>MyLittleVault</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
